--- a/app/todo
+++ b/app/todo
@@ -14,3 +14,6 @@ I want to have:
 [ ] Support for AI controllers (and one sample AI) [4 pomodoro]
 
 [ ] Alien parade images instead of circles
+
+Note for authentication:
+http://asciicasts.com/episodes/270-authentication-in-rails-3-1 
